certifications/jakarta-faces/2.3/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Server Faces.

# Eclipse Mojarra 2.3.9, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  Eclipse Mojarra 2.3.9, provides Jakarta Server Faces 2.3.1
  [Eclipse Mojarra Project](https://github.com/eclipse-ee4j/mojarra)
- Specification Name, Version and download URL: <br/>
  [Jakarta Server Faces, 2.3](https://jakarta.ee/specifications/faces/2.3)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Server Faces 2.3, TCK](https://download.eclipse.org/jakartaee/faces/2.3/eclipse-faces-tck-2.3.0.zip), SHA-256: `77375ad39f8b736034dbfd554152bbd3e3931a9c9ef1760049c60c5fa87a06d9`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 5525 tests.
[javatest.batch] Number of Tests Passed      = 5525
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```
